--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,10 @@
     ],
     "require":{
          "php":">=5.5.9",
-	 "illuminate/support":"~5.0"
     },
     "autoload":{
        "psr-4":{
-            "Uooki\\Acl\\":"src/Uooki/Acl"
+            "Acl\\":"src/"
        }
     }
 }
