--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
     "authors":[
         {
 	   "name":"Shaun.zung",
-	   "role":"Developer"
+	   "role":"Php Developer"
 	}
     ],
     "require":{
-         "php":">=5.5.9",
+         "php":">=5.5.9"
     },
     "autoload":{
        "psr-4":{
-            "Acl\\":"src/"
+            "Uooki\\Apacl\\":"src/"
        }
     }
 }
